Hopper.com people page fixing

--- a/css/main.css
+++ b/css/main.css
@@ -1693,7 +1693,8 @@ u {
   padding: 0; }
 
 .people-2 {
-  overflow-y: hidden; }
+  overflow-y: hidden;
+  margin-top: 60%; }
   .people-2 .people_2a {
     display: flex;
     justify-content: space-around; }
@@ -1919,6 +1920,18 @@ u {
 .mobileIcon {
   display: none; }
 
+.department {
+  display: none; }
+
+.people-containerMobile {
+  display: none; }
+
+.people-2Mobile {
+  display: none; }
+
+.mobilethought {
+  display: none; }
+
 .peopleVideo {
   margin-top: 10%; }
 
@@ -1949,6 +1962,40 @@ u {
 
 .peopleCarousel__image3 {
   width: 1200px; }
+
+.thought__header {
+  font-size: 42px;
+  line-height: 49px;
+  color: #000000; }
+
+.thought__paragraph {
+  font-size: 24px;
+  line-height: 32px;
+  color: #878787; }
+
+.thought__button {
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  background: #01AAE4;
+  border-radius: 8px 0 0 8px;
+  padding: 10px;
+  margin-right: -5%;
+  width: 250px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1); }
+
+.thought__button2 {
+  font-size: 14px;
+  line-height: 20px;
+  text-align: center;
+  color: #FFFFFF;
+  background: #01AAE4;
+  border-radius: 0px 8px 8px 0px;
+  margin-bottom: 20%;
+  padding: 10px;
+  width: 50px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.1); }
 
 @media screen and (max-width: 580px) {
   .peopleSection {
@@ -1986,7 +2033,129 @@ u {
     height: 200px; }
   .peopleCarousel__image3 {
     width: 300px;
-    height: 200px; } }
+    height: 200px; }
+  .peopleCarousel__image4 {
+    width: 300px;
+    height: 200px; }
+  .flex-container #flex-item-1 {
+    display: none; }
+  .flex-container #flex-item-2 {
+    display: none; }
+  .department {
+    display: flex;
+    flex-direction: column;
+    margin-top: -50%; }
+    .department__header {
+      font-size: 22px;
+      line-height: 27px;
+      color: #555555; }
+    .department__paragraph {
+      color: #878787;
+      font-size: 14px;
+      line-height: 19px;
+      width: 280px; }
+  .people-container {
+    display: none; }
+  .people-containerMobile {
+    display: block; }
+    .people-containerMobile .item-1 {
+      position: relative;
+      left: 250px;
+      top: 100px; }
+    .people-containerMobile .item-2 {
+      position: relative;
+      left: 150px;
+      top: 150px; }
+    .people-containerMobile .item-3 {
+      position: relative;
+      left: 150px;
+      top: 50px; }
+    .people-containerMobile .item-4 {
+      position: relative;
+      left: 150px;
+      top: 150px; }
+    .people-containerMobile .people-containerMobile__header {
+      font-size: 24px;
+      line-height: 26px;
+      color: #505050; }
+    .people-containerMobile .people-containerMobile__paragraph {
+      font-size: 12px;
+      line-height: 16px;
+      color: #000000; }
+  .people-2 {
+    display: none; }
+  .people-2Mobile {
+    display: flex;
+    flex-direction: column;
+    margin-top: 270%;
+    margin-left: 10%; }
+  .people-2Mobile__header {
+    font-size: 22px;
+    line-height: 27px;
+    color: #555555; }
+  .people-2Mobile__paragraph {
+    font-size: 14px;
+    line-height: 19px;
+    color: #878787; }
+  .thought {
+    display: none; }
+  .mobilethought {
+    display: flex;
+    flex-direction: column;
+    margin-top: 20%; }
+    .mobilethought .mobilethought__header {
+      font-size: 22px;
+      line-height: 27px;
+      color: #555555; }
+    .mobilethought .mobilethought__paragraph {
+      font-size: 14px;
+      line-height: 19px;
+      color: #878787; }
+    .mobilethought .mobilethought__link {
+      display: inline; } }
+
+.modal {
+  display: none;
+  /* Hidden by default */
+  position: fixed;
+  /* Stay in place */
+  z-index: 1;
+  /* Sit on top */
+  padding-top: 100px;
+  /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%;
+  /* Full width */
+  height: 100%;
+  /* Full height */
+  overflow: auto;
+  /* Enable scroll if needed */
+  background-color: black;
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+  /* Black w/ opacity */ }
+
+/* Modal Content */
+.modal-content {
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; }
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold; }
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer; }
 
 * {
   padding: 0;
@@ -2385,41 +2554,20 @@ a {
   margin: 90px  auto;
   flex-direction: row;
   flex-wrap: wrap; }
-  @media screen and (max-width: 767px) {
-    .flex-container {
-      flex-direction: column; } }
   .flex-container #flex-item-1 {
     padding-top: 35px;
     width: 50%;
     padding-right: 30px;
     text-align: left; }
-    @media screen and (max-width: 767px) {
-      .flex-container #flex-item-1 {
-        width: 80%;
-        margin: 50px auto;
-        padding-right: 0px; } }
     .flex-container #flex-item-1 h2 {
       font-size: 42px;
       line-height: 49px; }
-      @media screen and (max-width: 767px) {
-        .flex-container #flex-item-1 h2 {
-          font-size: 30px;
-          line-height: 27px;
-          margin-bottom: 15px; } }
     .flex-container #flex-item-1 p {
       font-size: 24px;
       line-height: 32px;
       color: #878787; }
-      @media screen and (max-width: 767px) {
-        .flex-container #flex-item-1 p {
-          font-size: 22px; } }
   .flex-container #flex-item-2 {
     width: 36%; }
-    @media screen and (max-width: 767px) {
-      .flex-container #flex-item-2 {
-        width: 70%;
-        margin: 0px auto;
-        padding-right: 0px; } }
     .flex-container #flex-item-2 img {
       width: 420px;
       height: 304px; }
