--- a/css/main.css
+++ b/css/main.css
@@ -1900,6 +1900,31 @@ u {
         margin: 30px 0;
         overflow-x: hidden; } }
 
+.people-subnav-1 {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 2rem;
+  z-index: 2;
+  background: white;
+  position: fixed;
+  top: 0;
+  width: 100%; }
+  .people-subnav-1 .people-subnavimg {
+    margin-left: 10rem; }
+  .people-subnav-1 .people-subnav-ul {
+    display: flex; }
+    .people-subnav-1 .people-subnav-ul li {
+      color: #878787;
+      margin-left: 1rem; }
+    .people-subnav-1 .people-subnav-ul .people-subnavbar-btn {
+      margin-top: -0.3rem;
+      margin-left: 2rem; }
+      .people-subnav-1 .people-subnav-ul .people-subnavbar-btn a {
+        color: skyblue;
+        text-decoration: none; }
+      .people-subnav-1 .people-subnav-ul .people-subnavbar-btn img {
+        margin-left: 1rem; }
+
 .peopleSection {
   margin-top: 20%; }
   .peopleSection__header {
