--- a/components/header-b.html
+++ b/components/header-b.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="restriction">
-            <nav class="navbar">
+            <nav class="navbar1">
                 <div class="header-b-back">
                     <div>
                         <a href="./../pages/homepage.html"><img class="header-back-img" style="margin-right:1rem;" src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1569536409/samples/zainabs/l09cuyidzmo5vgqkrqtf.png"></a>
@@ -22,7 +22,7 @@
                     </div>
                 </div>
                 <div>
-                    <ul class="navbar-ul">
+                    <ul class="navbar1-ul">
                         <li><a href="./../pages/company.html">COMPANY</a></li>
                         <li class="people-nav"><a href="people.html">PEOPLE</a></li>
                         <li><a href="#support">SUPPORT<img class="support-nav" src=https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png></a></li>
