--- a/components/headerC.html
+++ b/components/headerC.html
@@ -22,16 +22,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#" style="color:black; line-height: 17px;">COMPANY</a>
+                      <a class="nav-link" href="company.html" style="color:black; line-height: 17px;">COMPANY</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#" style="color:black; line-height: 17px;">PEOPLE <span>|</span></a>
+                      <a class="nav-link" href="people.html" style="color:black; line-height: 17px;">PEOPLE <span>|</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" style="color:black; line-height: 17px;">SUPPORT   <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a>
+                        <a class="nav-link" href="support.html" style="color:black; line-height: 17px;">SUPPORT   <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><button type="button" style="width: 280px; background: transparent; padding: 8px; border-radius: 8px; color: #01AAE4; margin-top: -5%; border: 1px solid #01AAE4; box-sizing: border-box;">Send app to your Phone</button></a>
+                        <a class="nav-link" href="sendapptophone.html"><button type="button" style="width: 280px; background: transparent; padding: 8px; border-radius: 8px; color: #01AAE4; margin-top: -5%; border: 1px solid #01AAE4; box-sizing: border-box;">Send app to your Phone</button></a>
                     </li>
                   </ul>
                 </div>
