--- a/components/header.html
+++ b/components/header.html
@@ -22,16 +22,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                   <ul class="navbar-nav" style="margin-top: 2%;">
                     <li class="nav-item">
-                      <a class="nav-link" href="#">COMPANY</a>
+                      <a class="nav-link" href="company.html">COMPANY</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">PEOPLE <span>|</span></a>
+                      <a class="nav-link" href="people.html">PEOPLE <span>|</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">SUPPORT   <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a>
+                        <a class="nav-link" href="support.html">SUPPORT   <img src="https://res.cloudinary.com/dtbjhs8a6/image/upload/v1568629227/samples/figma%20homepage/qkyithncohhx6pvmgotw.png"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#"><button type="button" class="nav-button">Send app to your Phone</button></a>
+                        <a class="nav-link" href="sendapptophone.html"><button type="button" class="nav-button">Send app to your Phone</button></a>
                     </li>
                   </ul>
                 </div>
