--- a/scss/pages/_company.scss
+++ b/scss/pages/_company.scss
@@ -315,8 +315,11 @@
     }
     .owl-theme {
       margin-top: 20%;
+      justify-content: center;
+      align-items: center;
   
       .item {
+        display: flex;
         width: 300px;
         margin-left: 0%;
       }
