--- a/scss/pages/_people.scss
+++ b/scss/pages/_people.scss
@@ -568,6 +568,7 @@ margin-left:-0.5rem;
     }
     .mobileIcon {
         display: flex;
+        justify-content: center;
     }
     .peopleVideo__image {
         @include hidden();
@@ -576,6 +577,8 @@ margin-left:-0.5rem;
     .mobilePeopleVideo__image {
         display: flex;
         width: 280px;
+        justify-items: center;
+        align-items: center;
     }
 
     .peopleCarousel {
