--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -121,6 +121,10 @@
     .navbar-nav .nav-item .nav-link {
         color: $white;
         line-height: 17px;
+
+        &:hover {
+            color: $white;
+        }
     }
 }
 
